--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 coverage==5.0.3
 Flask==1.1.1
 Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.14
+Flask-Testing==0.8.0
+psycopg2-binary==2.8.4
+flask-migrate==2.5.2
+sqlalchemy_utils==0.36.1
