--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ psycopg2-binary==2.8.4
 flask-migrate==2.5.2
 sqlalchemy_utils==0.36.1
 pyjwt==1.7.1
+redis==3.4.1
+httpagentparser==1.9.0
+freezegun==0.3.15
+celery==4.4.1
